@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:                WebDyne-Request-FastCGI
-version:             1.013
+version:             1.014
 abstract:            ~
-license:             ~
+license:             gpl
 author:              
-    - Andrew Speer <andrew.speer@isolutions.com.au>
+    - Andrew Speer <andrew@webdyne.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
