@@ -16,6 +16,15 @@ use File::Spec;
 use IO::File;
 
 
+#  Get MakeMaker version - from Test::Simple Makefile.PL
+#
+my $mm_ver = $ExtUtils::MakeMaker::VERSION;
+if ($mm_ver =~ /_/) { # dev version
+    $mm_ver = eval $mm_ver;
+    die $@ if $@;
+}
+
+
 #  All done, init finished
 #
 #------------------------------------------------------------------------------
@@ -70,12 +79,32 @@ my %makefile=(
 
     'macro'					=>  {
 
-        COPYRIGHT				=>  'Copyright (c) 2003 Andrew Speer, All rights reserved',
+        COPYRIGHT				=>  'Copyright (C) 2006-2010 Andrew Speer, All rights reserved',
 	LICENSE					=>  'GPL: GNU General Public License'
 
        },
 
-    AUTHOR					=> 'Andrew Speer <andrew.speer@isolutions.com.au>'
+    ($] <  5.005 ? () : (
+    
+        AUTHOR				    =>  'Andrew Speer <andrew@webdyne.org>',
+        
+    )),
+
+    ($mm_ver < 6.31 ? () : (
+
+        LICENSE                             =>  'gpl',
+
+    )),
+    
+    ($mm_ver <= 6.45 ? () : (
+        
+        META_MERGE => { resources => {
+            
+            homepage                        =>  'http://webdyne.org',
+            license                         =>  'http://www.gnu.org/licenses/gpl.html'
+            
+        }}
+    )),
 
    );
 
