@@ -1,6 +1,6 @@
 #
 #
-#  Copyright (c) 2003 Andrew W. Speer <andrew.speer@isolutions.com.au>. All rights
+#  Copyright (C) 2006-2010 Andrew Speer <andrew@webdyne.org>. All rights
 #  reserved.
 #
 #  This file is part of WebDyne::Request::FastCGI.
@@ -20,7 +20,5 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 #
-#  $Id: VERSION.pm,v 1.10 2008/06/21 08:04:42 aspeer Exp $
-
 package WebDyne::Request::FastCGI::VERSION;
-$VERSION='1.013';
+$VERSION='1.014';
