@@ -1,3 +1,11 @@
+commit 39c586857145395e44908a476a468d4ae5242823
+Author: Andrew Speer <andrew@webdyne.org>
+Date:   Sun Apr 11 16:23:47 2010 +0930
+
+    Tag: WebDyne-Request-FastCGI_1.014
+    
+    Fix copyright and author information, update Makefile.PL to generate better META.yml
+
 commit bb640a866b2a1960154d13a5531e5771225a5f62
 Author: Andrew Speer <aspeer@copper.isolutions.com.au>
 Date:   Thu Apr 8 22:09:25 2010 +0930
